--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -18,9 +18,7 @@ collections:
     label: "صفحات"
     folder: "content/pages"
     create: true
-    slug:
-      encoding: "unicode"
-      clean_accents: true
+    slug: "{{slug}}"
     fields:
       - { label: "عنوان", name: "title", widget: "string" }
       - { label: "محتوا", name: "body", widget: "markdown" }
